[workspace]
resolver = "2"
members = [
  # Packages
  "packages/shade_protocol",
  #"packages/secretcli",
  #"packages/contract_harness",
  "packages/multi_test",
  "packages/multi_derive",
  "packages/contract_derive",

  # Network setups
  "contracts/airdrop",

  # Protocol contracts
  "contracts/snip20",
  "contracts/governance",
  "contracts/bonds",
  #"contracts/mint",
  #"contracts/liability_mint",
  #"contracts/mint_router",
  "contracts/oracle",
  "contracts/sky",
  "contracts/peg_stability",
  "contracts/query_auth",
  "contracts/admin",

  # DAO
  # - Core
  "contracts/dao/treasury",
  "contracts/dao/treasury_manager",
  # - Adapters
  "contracts/dao/scrt_staking",
  "contracts/dao/rewards_emission",
  "contracts/dao/lp_shdswap",

  #"contracts/snip20_staking",
  
  # Mock contracts
  "contracts/mock/mock_band",
  "contracts/mock/mock_secretswap_pair",
  "contracts/mock/mock_sienna_pair",
  "contracts/mock/mock_adapter",

  # Tools
  "tools/doc2book",
]

exclude = ["packages/network_integration"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
