[workspace]
resolver = "2"
members = [
  # Packages
  "packages/shade_protocol",
  "packages/secretcli",
  "packages/multi_test",
  "packages/multi_derive",
  "packages/contract_derive",
  "packages/lending_utils",

  # Network setups
  "contracts/airdrop",

  # Protocol contracts
  "contracts/snip20",
  "contracts/governance",
  # "contracts/bonds", //TODO: migrate to v1
  # "contracts/liability_mint", //TODO: migrate
  "contracts/sky",
  "contracts/peg_stability",
  "contracts/query_auth",
  "contracts/admin",
  "contracts/basic_staking",
  "contracts/snip20_migration",

  # Staking
  "contracts/basic_staking",
  "contracts/snip20_derivative",

  # DAO
  # - Core
  "contracts/dao/treasury",
  "contracts/dao/treasury_manager",
  # - Adapters
  "contracts/dao/scrt_staking",
  "contracts/dao/stkd_scrt",
  "contracts/dao/rewards_emission",
  "contracts/dao/lp_shdswap",

  # Lending protocol
  "contracts/lend-token",

  # "contracts/snip20_staking", //TODO: migrate to v1

  # Mock contracts
  # "contracts/mock/mock_band", //TODO: migrate to v1
  # "contracts/mock/mock_secretswap_pair", //TODO: migrate to v1
  "contracts/mock/mock_sienna_pair",
  # "contracts/mock/mock_adapter", //TODO: migrate to v1
  "contracts/mock/mock_stkd_derivative",

  # Tools
  "tools/doc2book",
  "launch"
]

exclude = ["packages/network_integration"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
