[package]
name = "liability_mint"
version = "0.1.0"
authors = [
  "Guy Garcia <guysebastiangarcia@gmail.com>",
  "Jackson Swenson <jacksonswenson22@gmail.com>",
]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["shade-protocol/backtraces"]
debug-print = ["shade-protocol/debug-print"]

[dependencies]
shade-protocol = { version = "0.1.0", path = "../../packages/shade_protocol", features = [ "mint", "liability_mint", "snip20", "storage_plus", "chrono"] }
schemars = "0.7"
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.0.0" }
cosmwasm-schema = "1.1.5"
shade-oracles = { git = "https://github.com/securesecrets/shade-oracle" }

[dev-dependencies]
shade-multi-test = { path = "../../packages/multi_test", features = [ 
  "liability_mint", 
  "snip20" 
] }
