[package]
name = "ics20-proxy"
version = "0.1.0"
authors = ["Jackson Swenson <jacksonswenson22@securesecrets.org>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["shade-protocol/backtraces"]

[dependencies]
# cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", branch = "secret", features = ["stargate"]}
# secret-storage-plus = { git = "https://github.com/securesecrets/secret-storage-plus", tag = "v1.0.0" }
#cosmwasm-math-compat = { path = "../../packages/cosmwasm_math_compat" }
# query-authentication = { git = "https://github.com/securesecrets/query-authentication", tag = "v1.3.0" }
shade-protocol = { version = "0.1.0", path = "../../packages/shade_protocol", features = [
  "storage_plus",
  "utils",
] }
cosmwasm-schema = { git = "https://github.com/CosmWasm/cosmwasm", commit = "1e05e7e" }

[dev-dependencies]
contract_harness = { version = "0.1.0", path = "../../packages/contract_harness", features = [ "snip20" ] }
#fadroma = { branch = "v100", commit = 76867e0, git = "https://github.com/hackbg/fadroma.git", features= ["ensemble"] }
