[package]
name = "lend-token"
version = { workspace = true }
authors = ["Jakub <jakub@moonbite.space>"]
edition = { workspace = true }
description = "Implementation of Token contract for lending protocol"
repository = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-schema = "1.4.0"
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.0.0" }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.0.0" }
shade-protocol = { version = "0.1.0", path = "../../packages/shade_protocol", features = [
  "snip20",
  "storage_plus",
] }
schemars = "0.8"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = "1"
# utils = { version = "0.7.0", path = "./packages/utils" }

[dev-dependencies]
shade-multi-test = { path = "../../../packages/multi_test", features = [ "snip20" ] }
anyhow = "1"
