[workspace]
members = [
    "libraries",
]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["shade-protocol/backtraces"]

[dependencies]
shade-protocol = { version = "0.1.0", path = "../../../packages/shade_protocol", features = [
  "storage_plus",
] }

[dev-dependencies]
shade-multi-test = { path = "../../../packages/multi_test", features = [ 
  "admin"
] }