[package]
name = "mint"
version = "0.1.0"
authors = ["Guy Garcia <guysebastiangarcia@gmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
#debug-print = ["cosmwasm-std/debug-print"]

[dependencies]
cosmwasm-schema = { git = "https://github.com/scrtlabs/SecretNetwork", tag = "v1.2.0" }
cosmwasm-std = { git = "https://github.com/scrtlabs/SecretNetwork", tag = "v1.2.0" }
cosmwasm-storage = { git = "https://github.com/scrtlabs/SecretNetwork", tag = "v1.2.0" }
secret-toolkit = { git = "https://github.com/scrtlabs/secret-toolkit" }
shade-protocol = { version = "0.1.0", path = "../../packages/shade_protocol" }
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }
