[package]
name = "mock_adapter"
version = "0.1.0"
authors = [
  "Jack Swenson <jacksonswenson22@gmail.com>",
]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
debug-print = ["cosmwasm-std/debug-print"]

[dependencies]
cosmwasm-std = { version = "0.10.1", package = "secret-cosmwasm-std" }
#cosmwasm-storage-plus = { version = "0.10", package = "secret-storage-plus" }
#secret-storage-plus = { git = "https://github.com/securesecrets/secret-storage-plus", tag = "v1.0.0"}
cosmwasm-schema = "0.10.1"
secret-toolkit = { version = "0.2" }
cosmwasm-math-compat = { path = "../../packages/cosmwasm_math_compat" }
shade-protocol = { version = "0.1.0", path = "../../packages/shade_protocol", features = [
  "adapter",
] }
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
secret-storage-plus = { git = "https://github.com/securesecrets/secret-storage-plus", tag = "v1.0.0" }
