[package]
name = "sky"
version = "0.1.0"
authors = [
  "jackb7",
]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["shade-protocol/backtraces"]

[dependencies]
shade-protocol = { version = "0.1.0", path = "../../packages/shade_protocol", features = ["sky", "sky-utils", "adapter", "math", "admin"] }
#shade-admin = { git = "https://github.com/securesecrets/shadeadmin", branch = "cosmwasm-v1-refactor", optional = true }
schemars = "0.7"

[dev-dependencies]
#shade-protocol = { version = "0.1.0", path = "../../packages/shade_protocol", features = ["ensemble"] }
#contract_harness = { version = "0.1.0", path = "../../packages/contract_harness" }
