[package]
name = "snip20"
version = "0.1.0"
authors = ["Guy Garcia <guysebastiangarcia@gmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["shade-protocol/backtraces"]
debug-print = ["shade-protocol/debug-print"]

[dependencies]
shade-protocol = { version = "0.1.0", path = "../../packages/shade_protocol", features = [
  "storage",
  "math",
  "storage_plus",
  "snip20-impl",
  "query_auth",
] }
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.0.0" }

[dev-dependencies]
shade-protocol = { version = "0.1.0", path = "../../packages/shade_protocol", features = [ "multi-test", "admin" ] }
shade-multi-test = { path = "../../packages/multi_test", features = [ "snip20", "query_auth", "admin" ] }
