[package]
name = "snip20_derivative"
version = "1.0.0"
authors = ["David Rodriguez <david@stakeordie.com>"]
edition = "2021"
exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.0.0", default-features = false }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.0.0" }
shade-protocol = { version = "0.1.0", path = "../../packages/shade_protocol", features = [
  "admin",
  "query_auth",
  "snip20",
  "storage_plus",
] }
secret-toolkit = { version = "0.10.0",  features = [
  "permit",
  "viewing-key",
] }
secret-toolkit-crypto = { version = "0.10.0", features = ["rand", "hash"]}

schemars = "0.8.11"
serde = { version = "1.0.114", default-features = false, features = ["derive"] }
base64 = "0.13.0"

[dev-dependencies]
cosmwasm-schema = { version = "1.1.8" }
