[package]
name = "spip_stkd_0"
version = "0.1.0"
authors = ["Guy <guyg@securesecrets.org>"]
edition = "2018"
exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
#default = ["debug-print"]
backtraces = ["cosmwasm-std/backtraces"]

# debug-print = ["cosmwasm-std/debug-print"]
[dependencies]
cosmwasm-std = { version = "0.10", package = "secret-cosmwasm-std" }
cosmwasm-storage = { version = "0.10", package = "secret-cosmwasm-storage" }
secret-toolkit = { version = "0.2", features = ["permit"] }
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }
bincode2 = "2.0.1"
subtle = { version = "2.2.3", default-features = false }
base64 = "0.12.3"
rand_chacha = { version = "0.2.2", default-features = false }
rand_core = { version = "0.5.1", default-features = false }
sha2 = { version = "0.9.1", default-features = false }

shade-protocol = { version = "0.1.0", path = "../../packages/shade_protocol", features = ["shd_staking", "snip20", "storage"] }
cosmwasm-math-compat = { version = "0.1.0", path = "../../packages/cosmwasm_math_compat" }

# Large number math
ethnum = "1.1.1"

[dev-dependencies]
cosmwasm-schema = { version = "0.9.2" }
rand = "0.8.4"
